# akceleracja

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
algorithms/: cpuLinear.cpp  cpuLinear.h  cpuParallel.cpp  cpuParallel.h  gpuBasic.cu  gpuBasic.h  gpuOpt2.cu  gpuOpt2.h
configFiles/: bigtest.txt  glider.txt  oscillators.txt  test.txt  testGlider.txt  testOscillators.txt  testUnchanged.txt  unchanged.txt
controllers/: VisualizationController.cpp  VisualizationController.h  generateRandomGame.h  readStartConfig.cpp  readStartConfig.h  visualizationController.cpp  visualizationController.h  writeController.cpp  writeController.h
gameLogic/: GameInstance.cpp  GameInstance.h
testing/: TestRunner.cpp  TestRunner.h  _test_config.txt
tools/: BetterRandom.h  EnvVar.cpp  EnvVar.h  Timer.h  clearScreen.h  countGPUThreads.h  switchCase.h
